Fix margin content-boxes on small devices

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -422,7 +422,7 @@ p.created {
   }
   
   h4.index-heading {
-    margin-top: 42px;
+    margin-top: 34px;
     line-height: 0.3;
   }
   
